sample/retrieveUnpackaged/objects/BLND_DFTT_Document__c.object
<CustomObject>
    <fields>
        <fullName>BLND_Data__c</fullName>
        <label>Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Expansion__c</fullName>
        <label>Expansion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Extra_Field__c</fullName>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Flag1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Flag2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Flag3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Folder_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder Link</label>
        <referenceTo>BLND_DFTT_Folder__c</referenceTo>
        <relationshipLabel>TableTop Documents</relationshipLabel>
        <relationshipName>R00N30000002PYhYEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Over1__c</fullName>
        <label>Over1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Over2__c</fullName>
        <label>Over2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Over3__c</fullName>
        <label>Over3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Filter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webpage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>TableTop Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TableTop Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>